kubernetes/doc-home-cluster/apps/downloads/notifiarr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: notifiarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: notifiarr
  egress:
    # sonarr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP

    # radarr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP


    # plex
    - toFQDNs:
      - matchName: "piscionas.piscio.net"
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
